--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
